2006-05-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/objectfactory.py: (FileSourceFactory.__gproperties__): 
	The << operator causes issues with Python 2.3. Replacing 2<<63 with 2**63.

2006-05-22  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py: (PitiviMainWindow._aboutCb): 
	LGPL is Lesser General Public License

2006-05-22  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.10.0.2 pre-release

2006-05-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	remove print statement

2006-05-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/objectfactory.py:
	Better Markup for getPrettyInfo()
	* pitivi/ui/sourcefactories.py:
	Remember last directory sources were taken from so we can reopen the
	FileChooserDialog with that directory.

2006-05-17  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	* pitivi/playground.py:
	Ignore error messages coming from GstQueue. Hopefully these hacks will
	go away once we can depend on GStreamer core >= 0.10.7
	If query_position() returns -1, don't emit position update.

2006-05-17  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	typo error

2006-05-16  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/exportsettingswidget.py:
	Put button in proper orders (Cancel then OK)

2006-05-16  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Fixed recording for tee -> identity conversion/hack.
	We remove audio/video sink when encoding and put them back when finished.
	* pitivi/playground.py:
	added debug for position signal emission.
	* pitivi/ui/complextimeline.py:
	don't send a negative frame value to toplayer's timelinePositionChanged
	* pitivi/ui/encodingdialog.glade:
	Better order for buttons.
	Cancel button becomes close button.
	* pitivi/ui/viewer.py:
	Grey-out (set_sensitive()) the main window when the encoding dialog is showing.
	Lots of fixes with the EncodingDialog:
	_ Close button becomes cancel when encoding
	_ Show Time Left in progressbar