@@ -1,5 +1,11 @@
 2006-05-23  Edward Hervey  <edward@fluendo.com>
 
+	* pitivi/check.py:
+	Added check to see if autodetect plugin can initialize themselves and
+	found at least one valid real sink.
+
+2006-05-23  Edward Hervey  <edward@fluendo.com>
+
 	* pitivi/objectfactory.py: (FileSourceFactory.__gproperties__): 
 	The << operator causes issues with Python 2.3. Replacing 2<<63 with 2**63.
 
